fix: remove absolute positioning on customer-social-profile links element in customer profile
resolves visual overlap issues when a customer has 12+ links on their profile

Fixes https://github.com/freescout-help-desk/freescout/issues/4644

--- a/public/css/style-rtl.css
+++ b/public/css/style-rtl.css
@@ -31,11 +31,6 @@ body.locale-fa {
     position: relative;
 }
 
-.customer-social-profiles {
-    right: 92px;
-    left: auto;
-}
-
 .accordion .panel-title > a .caret {
     float: left;
 }
